# dusk-lang

./: .clang-format  .gitignore  CMakeLists.txt  TODO  run_tests.py  test.dusk  test.sh
.github/workflows/: build.yml
docs/: Makefile  spec.adoc
dusk/: dusk.h  dusk_allocator.c  dusk_analysis.c  dusk_ast_to_ir.c  dusk_compiler.c  dusk_internal.h  dusk_ir.c  dusk_map.c  dusk_parser.c  dusk_spirv.c  dusk_string_builder.c  dusk_type.c  spirv.h
duskc/: duskc.c
tests/: invalid_missing_block_decoration.dusk  invalid_missing_set_attr.dusk  invalid_missing_storage_class.dusk  invalid_missing_struct_layout.dusk  invalid_missing_struct_layout2.dusk  invalid_nested_block.dusk  valid_compound_literals.dusk  valid_func_call.dusk  valid_image_funcs.dusk  valid_sample.dusk
